# actix-boilerplate

./: .gitignore  Cargo.toml  README.md  build.rs  schema.prisma
src/: lib.rs  main.rs
src/config/: mod.rs
src/controllers/: mod.rs  user_controller.rs
src/models/: user.rs
src/repositories/: mod.rs  user_repository.rs
src/services/: mod.rs  user_service.rs
src/utils/: database.rs
